--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/img/favicon-pasta.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda | Pasta e Passione</title>
+    <meta name="description" content="Pasta e Passione es una tienda de pastas frescas artesanales, salsas caseras y productos gourmet italianos. Catálogo completo con ravioles, ñoquis y fideos, elaborados con tradición y calidad.">
     <meta name="author" content="Fiamma Antonella Lugo Gutiérrez">
   </head>
   <body>
